create cmake files for tooling

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -9,4 +9,5 @@ endif()
 if (BUILD_GNC AND BUILD_VISION)
     add_subdirectory(octomap)
     add_subdirectory(octomap_viz)
+    add_subdirectory(planner)
 endif()
