--- a/tools/planner/CMakeLists.txt
+++ b/tools/planner/CMakeLists.txt
@@ -1,5 +1,7 @@
 find_package(OpenCV REQUIRED)
 find_package(Octomap REQUIRED)
+find_package(RapidJson REQUIRED)
+find_package(Eigen3 REQUIRED)
 
 if(NOT BUILD_GNC)
     return()
@@ -9,6 +11,8 @@ include_directories(
     ${ZCM_INCLUDE_DIRS}
     ${SW_INCLUDE_DIR}
     ${OPENCV_INCLUDE_DIRS}
+    ${RAPID_JSON_INCLUDE_DIR}
+    ${EIGEN3_INCLUDE_DIR}
 )
 
 include_directories(
