--- a/tools/planner/CMakeLists.txt
+++ b/tools/planner/CMakeLists.txt
@@ -18,7 +18,7 @@ include_directories(
 
 add_executable(tool-octomap-creation createOctomap.cpp)
 
-add_executable(tool-planner-visualization visualizePlanner.cpp)
+# add_executable(tool-planner-visualization visualizePlanner.cpp)
 
 target_link_libraries(tool-octomap-creation
     maav-utils
@@ -29,11 +29,11 @@ target_link_libraries(tool-octomap-creation
     ${Octomap_LIBRARIES}
 )
 
-target_link_libraries(tool-planner-visualization
-    maav-utils
-    maav-msg
-    VisionUtils
-    ${ZCM_LIBRARIES}
-    ${YAMLCPP_LIBRARY}
-    ${Octomap_LIBRARIES}
-)
+# target_link_libraries(tool-planner-visualization
+#     maav-utils
+#     maav-msg
+#     VisionUtils
+#     ${ZCM_LIBRARIES}
+#     ${YAMLCPP_LIBRARY}
+#     ${Octomap_LIBRARIES}
+# )
