Added continuous path following within the controller with a linear interpolator

--- a/src/gnc/CMakeLists.txt
+++ b/src/gnc/CMakeLists.txt
@@ -71,6 +71,8 @@ add_library(maav-control SHARED
     control/Controller.cpp
     control/StateMachine.cpp
     control/LandDetector.cpp
+    control/ContinuousPath.cpp
+    control/LinearlyInterpolatedPath.cpp
 )
 
 target_include_directories(maav-control PUBLIC
