--- a/src/common/mavlink/CMakeLists.txt
+++ b/src/common/mavlink/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(maav-mavlink
     ${SW_INCLUDE_DIR}
-    ${EIGEN3_INCLUDE_DIR}
+    ${EIGEN_INCLUDE_DIRS}
     ${ZCM_INCLUDE_DIRS}
 )
 
