--- a/src/vision/core/CMakeLists.txt
+++ b/src/vision/core/CMakeLists.txt
@@ -11,7 +11,7 @@ list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
 include_directories(
     ${OPENCV_INCLUDE_DIR}
     ${YAMLCPP_INCLUDE_DIRS}
-    ${EIGEN3_INCLUDE_DIR}
+    ${EIGEN_INCLUDE_DIRS}
     ${LIBREALSENSE2_INCLUDE_DIRS}
     ${ZCM_INCLUDE+DIRS}
 )
